--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,3 +13,91 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.rangliste{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.rangliste > div{ margin-right: 1rem}
+section{background-color: grey;margin-bottom: 2rem}
+
+article{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  min-height: 100vh;
+  background-color: rgb(0, 0, 0);
+}
+h2{
+  text-align: left
+}
+p.MuiTypography-body1{
+  text-align: left;
+  padding-left: 0;
+}
+main {
+  padding: 10px;
+  height: calc(100vh - 72px);
+  overflow-y: scroll;
+  display: flex;
+  padding-bottom: 0;
+  flex-direction: column;
+}
+p {
+max-width: 500px;
+margin-bottom: 12px;
+line-height: 24px;
+padding: 10px 20px;
+border-radius: 25px;
+position: relative;
+color: white;
+text-align: center;
+}
+
+.message {
+display: flex;
+align-items: center;
+justify-content: flex-end;
+margin-bottom: .5rem;
+}
+.MuiContainer-root{
+  width: 100%;
+  display: block;
+  box-sizing: border-box;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 0 !important;
+  overflow: scroll;
+  padding-right: 0 !important;
+}
+.message .MuiCardContent-root:last-child{
+padding: 0;
+}
+.message .MuiTypography-paragraph{
+margin-bottom: 0;
+padding: 0;
+text-align: left;
+}
+
+.message .MuiTypography-subtitle2{
+text-align: right;
+color: white;
+font-weight: bold;
+}
+
+.message .MuiCard-root{
+padding: .2rem 1.2rem .2rem .5rem
+}
+
+input[type="file"]{
+display: none;
+}
+div.floatingButton{
+position: fixed;
+bottom: 66px;
+right: 10px;
+}
+
+.chatStyle{background-color: red !important}
+
+.login{justify-content: center;align-items: center}
